salesforce/force-app/main/default/objects/AFM_Site__c/AFM_Site__c.object-meta.xml
<CustomObject>
    <description>A watched airport in the AFM global watchlist. One record per airport. Synced from the AFM API.</description>
    <label>AFM Site</label>
    <pluralLabel>AFM Sites</pluralLabel>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>