salesforce/force-app/main/default/objects/AFM_Site__c/fields/AFM_Active__c.field-meta.xml
<CustomField>
    <fullName>AFM_Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>True while the airport is in the current watchlist.</description>
</CustomField>