salesforce/force-app/main/default/objects/AFM_Site__c/fields/AFM_Iata__c.field-meta.xml
<CustomField>
    <fullName>AFM_Iata__c</fullName>
    <label>IATA</label>
    <type>Text</type>
    <length>3</length>
    <description>IATA airport code, e.g. SFO.</description>
</CustomField>