salesforce/force-app/main/default/objects/AFM_Site__c/fields/AFM_Icao__c.field-meta.xml
<CustomField>
    <fullName>AFM_Icao__c</fullName>
    <label>ICAO</label>
    <type>Text</type>
    <length>4</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>ICAO airport code, e.g. KSFO. Natural key; AFM sync upserts on this.</description>
</CustomField>