salesforce/force-app/main/default/objects/AFM_Site__c/fields/AFM_Lat__c.field-meta.xml
<CustomField>
    <fullName>AFM_Lat__c</fullName>
    <label>Latitude</label>
    <type>Number</type>
    <precision>11</precision>
    <scale>5</scale>
    <description>Airport latitude (decimal degrees).</description>
</CustomField>