salesforce/force-app/main/default/objects/AFM_Site__c/fields/AFM_Lon__c.field-meta.xml
<CustomField>
    <fullName>AFM_Lon__c</fullName>
    <label>Longitude</label>
    <type>Number</type>
    <precision>11</precision>
    <scale>5</scale>
    <description>Airport longitude (decimal degrees).</description>
</CustomField>