salesforce/force-app/main/default/objects/AFM_Site__c/fields/AFM_Region__c.field-meta.xml
<CustomField>
    <fullName>AFM_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <description>Customer region tag. TitleCase per SALESFORCE.md §10.1 (Postgres lowercase maps via REGION_TO_SF).</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>